--- a/.gitconfig
+++ b/.gitconfig
@@ -40,7 +40,9 @@
 
 # Any GitHub repo with my username should be checked out r/w by default
 # http://rentzsch.tumblr.com/post/564806957/public-but-hackable-git-submodules
-[url "git@github.com:paulirish/"]
-  insteadOf = "git://github.com/paulirish/"
+[url "git@github.com:fkowal/"]
+  insteadOf = "git://github.com/fkowal/"
+[url "git@github.com:fkowal/"]
+  insteadOf = "https://github.com/fkowal/"
 [help]
 	autocorrect = 1
