--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,10 @@
 [alias]
 	c = commit -am
 	up = pull
+	br = branch
 	p = push
 	s = status -s
+	st = status
 	df = diff --color --color-words --abbrev
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
 [color]
